--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -511,6 +511,11 @@
     <string name="saturday_short">So</string>
     <string name="sunday_short">Ne</string>
 
+    <!-- Pro version -->
+    <string name="upgrade_to_pro">Táto verzia aplikácie už nie je podporovaná. Prosím prejdite na Pro verziu.</string>
+    <string name="it_is_free">Je do bezplatné do: %s</string>
+    <string name="upgrade">Stiahnuť</string>
+
     <!-- About -->
     <string name="about">O aplikácií</string>
     <string name="website_label">Pre zdrojové kódy navštívte</string>
