--- a/commons/src/main/res/values-el/strings.xml
+++ b/commons/src/main/res/values-el/strings.xml
@@ -489,6 +489,11 @@
     <string name="saturday_short">Σαβ</string>
     <string name="sunday_short">Κυρ</string>
 
+    <!-- Pro version -->
+    <string name="upgrade_to_pro">This version of the app is no longer maintained. Please upgrade to the Pro version.</string>
+    <string name="it_is_free">It is free till: %s</string>
+    <string name="upgrade">Upgrade</string>
+
     <!-- About -->
     <string name="about">Σχετικά</string>
     <string name="website_label">Για τον κώδικα επισκεφθείτε</string>
