--- a/commons/src/main/res/values-hr/strings.xml
+++ b/commons/src/main/res/values-hr/strings.xml
@@ -509,6 +509,11 @@
     <string name="saturday_short">Sub</string>
     <string name="sunday_short">Ned</string>
 
+    <!-- Pro version -->
+    <string name="upgrade_to_pro">This version of the app is no longer maintained. Please upgrade to the Pro version.</string>
+    <string name="it_is_free">It is free till: %s</string>
+    <string name="upgrade">Upgrade</string>
+
     <!-- About -->
     <string name="about">O nama</string>
     <string name="website_label">Za pregled izvornog koda posjetite</string>
