--- a/commons/src/main/res/values-ru/strings.xml
+++ b/commons/src/main/res/values-ru/strings.xml
@@ -511,6 +511,11 @@
     <string name="saturday_short">сб</string>
     <string name="sunday_short">вс</string>
 
+    <!-- Pro version -->
+    <string name="upgrade_to_pro">This version of the app is no longer maintained. Please upgrade to the Pro version.</string>
+    <string name="it_is_free">It is free till: %s</string>
+    <string name="upgrade">Upgrade</string>
+
     <!-- About -->
     <string name="about">О приложении</string>
     <string name="website_label">Исходный код можно найти по адресу</string>
