Update italian translation

--- a/commons/src/main/res/values-it/strings.xml
+++ b/commons/src/main/res/values-it/strings.xml
@@ -490,9 +490,9 @@
     <string name="sunday_short">Dom</string>
 
     <!-- Pro version -->
-    <string name="upgrade_to_pro">This version of the app is no longer maintained. Please upgrade to the Pro version.</string>
-    <string name="it_is_free">It is free till: %s</string>
-    <string name="upgrade">Upgrade</string>
+    <string name="upgrade_to_pro">Questa versione dell\'applicazione non è più supportata. Aggiornarla alla versione Pro.</string>
+    <string name="it_is_free">È gratuita fino a: %s</string>
+    <string name="upgrade">Aggiorna</string>
 
     <!-- About -->
     <string name="about">Informazioni</string>
