--- a/commons/src/main/res/values-nl/strings.xml
+++ b/commons/src/main/res/values-nl/strings.xml
@@ -490,9 +490,9 @@
     <string name="sunday_short">Zon</string>
 
     <!-- Pro version -->
-    <string name="upgrade_to_pro">This version of the app is no longer maintained. Please upgrade to the Pro version.</string>
-    <string name="it_is_free">It is free till: %s</string>
-    <string name="upgrade">Upgrade</string>
+    <string name="upgrade_to_pro">Deze versie wordt niet langer doorontwikkeld. Overweeg te upgraden naar de Pro-versie.</string>
+    <string name="it_is_free">Gratis tot: %s</string>
+    <string name="upgrade">Upgraden</string>
 
     <!-- About -->
     <string name="about">Over</string>
