--- a/commons/src/main/res/values-hr/strings.xml
+++ b/commons/src/main/res/values-hr/strings.xml
@@ -512,6 +512,7 @@
     <!-- Pro version -->
     <string name="upgrade_to_pro">This version of the app is no longer maintained. Please upgrade to the Pro version.</string>
     <string name="it_is_free">It is free till: %s</string>
+    <string name="more_info">More info</string>
     <string name="upgrade">Upgrade</string>
 
     <!-- About -->
