--- a/commons/src/main/res/values-ca/strings.xml
+++ b/commons/src/main/res/values-ca/strings.xml
@@ -382,7 +382,7 @@
     <string name="extra_large">Enorme</string>
     <string name="password_protect_hidden_items">Contrasenya per protegir els mitjans amagats</string>
     <string name="password_protect_whole_app">Contrasenya per protegir tota l’aplicació</string>
-    <string name="password_protect_file_deletion">Password protect file deletion and moving</string>
+    <string name="password_protect_file_deletion">Protegir amb contrasenya l\'eliminació i el moviment dels fitxers</string>
     <string name="keep_last_modified">Mantenir el valor de la darrera modificació al copiar/moure/canviar el nom dels arxius</string>
     <string name="show_info_bubble">Mostra una bombolla d\'informació en elements de desplaçament mitjançant arrossegament de la barra de desplaçament</string>
     <string name="prevent_phone_from_sleeping">No deixar dormir el telèfon amb la aplicació a primer pla</string>
@@ -493,10 +493,10 @@
     <string name="sunday_short">DG</string>
 
     <!-- Pro version -->
-    <string name="upgrade_to_pro">This version of the app is no longer maintained. Please upgrade to the Pro version.</string>
-    <string name="it_is_free">It is free till: %s</string>
-    <string name="more_info">More info</string>
-    <string name="upgrade">Upgrade</string>
+    <string name="upgrade_to_pro">Aquesta versió de l\'aplicació ja no es manté. Actualitzeu a la versió Pro.</string>
+    <string name="it_is_free">És gratuït fins a: %s</string>
+    <string name="more_info">Més informació</string>
+    <string name="upgrade">Actualitza</string>
 
     <!-- About -->
     <string name="about">Sobre</string>
