--- a/commons/src/main/res/values-es/strings.xml
+++ b/commons/src/main/res/values-es/strings.xml
@@ -379,7 +379,7 @@
     <string name="extra_large">Enorme</string>
     <string name="password_protect_hidden_items">Contraseña para proteger los medios ocultos</string>
     <string name="password_protect_whole_app">Contraseña para proteger toda la aplicación</string>
-    <string name="password_protect_file_deletion">Password protect file deletion and moving</string>
+    <string name="password_protect_file_deletion">Protegeger con contraseña eliminar y mover archivos</string>
     <string name="keep_last_modified">Mantener el valor de la última modificación al copiar/mover/renombrar los archivos</string>
     <string name="show_info_bubble">Mostrar una burbuja de información al desplazar elementos arrastrando la barra de desplazamiento</string>
     <string name="prevent_phone_from_sleeping">No dejar dormir el teléfono con la aplicación en primer plano</string>
@@ -490,10 +490,10 @@
     <string name="sunday_short">Dom</string>
 
     <!-- Pro version -->
-    <string name="upgrade_to_pro">This version of the app is no longer maintained. Please upgrade to the Pro version.</string>
-    <string name="it_is_free">It is free till: %s</string>
-    <string name="more_info">More info</string>
-    <string name="upgrade">Upgrade</string>
+    <string name="upgrade_to_pro">Esta versión de la aplicación ya no se mantiene. Por favor, actualice a la versión Pro.</string>
+    <string name="it_is_free">Es gratis hasta: %s</string>
+    <string name="more_info">Más informanción</string>
+    <string name="upgrade">Actualizar</string>
 
     <!-- About -->
     <string name="about">Acerca de</string>
