--- a/commons/src/main/res/values-it/strings.xml
+++ b/commons/src/main/res/values-it/strings.xml
@@ -492,7 +492,7 @@
     <!-- Pro version -->
     <string name="upgrade_to_pro">Questa versione dell\'applicazione non è più supportata. Aggiornarla alla versione Pro.</string>
     <string name="it_is_free">È gratuita fino a: %s</string>
-    <string name="more_info">More info</string>
+    <string name="more_info">Maggiori informazioni</string>
     <string name="upgrade">Aggiorna</string>
 
     <!-- About -->
