adding option keep both in conflicts dialog

--- a/commons/src/main/res/values-az/strings.xml
+++ b/commons/src/main/res/values-az/strings.xml
@@ -102,6 +102,7 @@
     <string name="file_already_exists_overwrite">\"%s\" faylı artıq mövcuddur. Üzərinə yazılsın?</string>
     <string name="folder_already_exists">\"%s\" qovluğu artıq mövcuddur</string>
     <string name="merge">Birləşdir</string>
+    <string name="keep_both">Keep both</string>
     <string name="overwrite">Üzərinə yaz</string>
     <string name="skip">Keç</string>
     <string name="append">\'_1\' ilə əlavə et</string>
