--- a/commons/src/main/res/values-cs/strings.xml
+++ b/commons/src/main/res/values-cs/strings.xml
@@ -102,6 +102,7 @@
     <string name="file_already_exists_overwrite">Soubor \"%s\" již existuje. Přepsat?</string>
     <string name="folder_already_exists">Složka \"%s\" již existuje</string>
     <string name="merge">Merge</string>
+    <string name="keep_both">Keep both</string>
     <string name="overwrite">Přepsat</string>
     <string name="skip">Přeskočit</string>
     <string name="append">Ponechat s \'_1\'</string>
