--- a/commons/src/main/res/values-da/strings.xml
+++ b/commons/src/main/res/values-da/strings.xml
@@ -102,6 +102,7 @@
     <string name="file_already_exists_overwrite">Filen \"%s\" findes allerede. Overskriv?</string>
     <string name="folder_already_exists">Mappen \"%s\" findes allerede</string>
     <string name="merge">Sammenflet</string>
+    <string name="keep_both">Keep both</string>
     <string name="overwrite">Overskriv</string>
     <string name="skip">Spring over</string>
     <string name="append">Tilføj \"_1\"</string>
