--- a/commons/src/main/res/values-fi/strings.xml
+++ b/commons/src/main/res/values-fi/strings.xml
@@ -102,6 +102,7 @@
     <string name="file_already_exists_overwrite">Tiedosto \"%s\" on jo olemassa. Korvataanko?</string>
     <string name="folder_already_exists">Kansio \"%s\" on jo olemassa</string>
     <string name="merge">Yhdistä</string>
+    <string name="keep_both">Keep both</string>
     <string name="overwrite">Korvaa</string>
     <string name="skip">Ohita</string>
     <string name="append">Lisää nimeen \'_1\'</string>
