--- a/commons/src/main/res/values-fr/strings.xml
+++ b/commons/src/main/res/values-fr/strings.xml
@@ -102,6 +102,7 @@
     <string name="file_already_exists_overwrite">Le fichier \"%s\" existe déjà. Écraser ?</string>
     <string name="folder_already_exists">Le répertoire \"%s\" existe déjà</string>
     <string name="merge">Fusionner</string>
+    <string name="keep_both">Keep both</string>
     <string name="overwrite">Écraser</string>
     <string name="skip">Passer</string>
     <string name="append">Ajouter un suffixe \"_1\"</string>
