--- a/commons/src/main/res/values-hr/strings.xml
+++ b/commons/src/main/res/values-hr/strings.xml
@@ -102,6 +102,7 @@
     <string name="file_already_exists_overwrite">Datoteka \"%s\" već postoji. Presnimiti?</string>
     <string name="folder_already_exists">Mapa \"%s\" već postoji</string>
     <string name="merge">Spoji</string>
+    <string name="keep_both">Keep both</string>
     <string name="overwrite">Presnimi</string>
     <string name="skip">Preskoči</string>
     <string name="append">Dodaj s \'_1\'</string>
