--- a/commons/src/main/res/values-id/strings.xml
+++ b/commons/src/main/res/values-id/strings.xml
@@ -102,6 +102,7 @@
     <string name="file_already_exists_overwrite">File \"%s\" Sudah Ada. Timpa saja?</string>
     <string name="folder_already_exists">Folder \"%s\" Sudah Ada</string>
     <string name="merge">Gabung</string>
+    <string name="keep_both">Keep both</string>
     <string name="overwrite">Timpa</string>
     <string name="skip">Lewati</string>
     <string name="append">Tambahkan Dengan \'_1\'</string>
