--- a/commons/src/main/res/values-it/strings.xml
+++ b/commons/src/main/res/values-it/strings.xml
@@ -102,6 +102,7 @@
     <string name="file_already_exists_overwrite">Il file \"%s\" esiste già. Sovrascrivi?</string>
     <string name="folder_already_exists">La cartella \"%s\" esiste già</string>
     <string name="merge">Unisci</string>
+    <string name="keep_both">Keep both</string>
     <string name="overwrite">Sovrascrivi</string>
     <string name="skip">Salta</string>
     <string name="append">Aggiungi \'_1\' alla fine</string>
