--- a/commons/src/main/res/values-ko-rKR/strings.xml
+++ b/commons/src/main/res/values-ko-rKR/strings.xml
@@ -102,6 +102,7 @@
     <string name="file_already_exists_overwrite">\"%s\" 파일이 이미 존재합니다. 덮어쓰시겠습니까?</string>
     <string name="folder_already_exists">Folder \"%s\" already exists</string>
     <string name="merge">Merge</string>
+    <string name="keep_both">Keep both</string>
     <string name="overwrite">덮어쓰기</string>
     <string name="skip">건너뛰기</string>
     <string name="append">\'_1\' 문자열을 추가함</string>
