--- a/commons/src/main/res/values-lt/strings.xml
+++ b/commons/src/main/res/values-lt/strings.xml
@@ -102,6 +102,7 @@
     <string name="file_already_exists_overwrite">Byla \"%s\" jau yra. Pervadinti?</string>
     <string name="folder_already_exists">Aplankalas \"%ai\" jau yra</string>
     <string name="merge">Sulieti</string>
+    <string name="keep_both">Keep both</string>
     <string name="overwrite">Užrašyti ant viršaus</string>
     <string name="skip">Praleisti</string>
     <string name="append">Papildyti su \'_1\'</string>
