--- a/commons/src/main/res/values-pt-rBR/strings.xml
+++ b/commons/src/main/res/values-pt-rBR/strings.xml
@@ -102,6 +102,7 @@
     <string name="file_already_exists_overwrite">Já existe um arquivo com o nome \"%s\". Substituir?</string>
     <string name="folder_already_exists">A pasta \"%s\" já existe</string>
     <string name="merge">Mesclar</string>
+    <string name="keep_both">Keep both</string>
     <string name="overwrite">Substituir</string>
     <string name="skip">Ignorar</string>
     <string name="append">Adicionar sufixo \'_1\'</string>
