--- a/commons/src/main/res/values-sl/strings.xml
+++ b/commons/src/main/res/values-sl/strings.xml
@@ -102,6 +102,7 @@
     <string name="file_already_exists_overwrite">Datoteka %s že obstaja. Jo želite prepisati?</string>
     <string name="folder_already_exists">Mapa %s že obstaja</string>
     <string name="merge">Združi</string>
+    <string name="keep_both">Keep both</string>
     <string name="overwrite">Prepiši</string>
     <string name="skip">Preskoči</string>
     <string name="append">Dodaj \'_1\'</string>
