--- a/commons/src/main/res/values-sv/strings.xml
+++ b/commons/src/main/res/values-sv/strings.xml
@@ -102,6 +102,7 @@
     <string name="file_already_exists_overwrite">Filen \"%s\" finns redan. Skriv över?</string>
     <string name="folder_already_exists">Mappen \"%s\" finns redan</string>
     <string name="merge">Slå ihop</string>
+    <string name="keep_both">Keep both</string>
     <string name="overwrite">Skriv över</string>
     <string name="skip">Hoppa över</string>
     <string name="append">Lägg till \'_1\'</string>
