--- a/commons/src/main/res/values-tr/strings.xml
+++ b/commons/src/main/res/values-tr/strings.xml
@@ -102,6 +102,7 @@
     <string name="file_already_exists_overwrite">\"%s\" dosyası zaten var. Üzerine yazılsın mı?</string>
     <string name="folder_already_exists">\"%s\" klasörü zaten var</string>
     <string name="merge">Birleştir</string>
+    <string name="keep_both">Keep both</string>
     <string name="overwrite">Üzerine yaz</string>
     <string name="skip">Atla</string>
     <string name="append">\'_1\' ile ekle</string>
