--- a/commons/src/main/res/values-zh-rTW/strings.xml
+++ b/commons/src/main/res/values-zh-rTW/strings.xml
@@ -102,6 +102,7 @@
     <string name="file_already_exists_overwrite">檔案 \"%s\" 已經存在。 要覆蓋嗎?</string>
     <string name="folder_already_exists">資料夾 \"%s\" 已經存在</string>
     <string name="merge">合併</string>
+    <string name="keep_both">Keep both</string>
     <string name="overwrite">覆蓋</string>
     <string name="skip">跳過</string>
     <string name="append">附加 \'_1\'</string>
