--- a/commons/src/main/res/values-br/strings.xml
+++ b/commons/src/main/res/values-br/strings.xml
@@ -102,6 +102,7 @@
     <string name="file_already_exists_overwrite">File \"%s\" already exists. Overwrite?</string>
     <string name="folder_already_exists">Folder \"%s\" already exists</string>
     <string name="merge">Merge</string>
+    <string name="keep_both">Keep both</string>
     <string name="overwrite">Overwrite</string>
     <string name="skip">Skip</string>
     <string name="append">Append with \'_1\'</string>
