--- a/commons/src/main/res/values-de/strings.xml
+++ b/commons/src/main/res/values-de/strings.xml
@@ -102,6 +102,7 @@
     <string name="file_already_exists_overwrite">Datei \"%s\" existiert bereits. Überschreiben?</string>
     <string name="folder_already_exists">Ordner \"%s\" existiert bereits</string>
     <string name="merge">Zusammenführen</string>
+    <string name="keep_both">Keep both</string>
     <string name="overwrite">Überschreiben</string>
     <string name="skip">Überspringen</string>
     <string name="append">\'_1\' anhängen</string>
