--- a/commons/src/main/res/values-el/strings.xml
+++ b/commons/src/main/res/values-el/strings.xml
@@ -102,6 +102,7 @@
     <string name="file_already_exists_overwrite">Το αρχείο \"%s\" υπάρχει ήδη. Αντικατάσταση?</string>
     <string name="folder_already_exists">Ο φάκελος \"%s\" υπάρχει ήδη</string>
     <string name="merge">Συγχώνευση</string>
+    <string name="keep_both">Keep both</string>
     <string name="overwrite">Αντικατάσταση</string>
     <string name="skip">Παράβλεψη</string>
     <string name="append">Προσάρτηση με \'_1\'</string>
