--- a/commons/src/main/res/values-gl/strings.xml
+++ b/commons/src/main/res/values-gl/strings.xml
@@ -102,6 +102,7 @@
     <string name="file_already_exists_overwrite">El archivo \"%s\" ya existe. Sobreescribir?</string>
     <string name="folder_already_exists">La carpeta \"%s\" ya existe</string>
     <string name="merge">Fusionar</string>
+    <string name="keep_both">Keep both</string>
     <string name="overwrite">Sobreescribir</string>
     <string name="skip">Saltar</string>
     <string name="append">Añadir \'_1\'</string>
