--- a/commons/src/main/res/values-hu/strings.xml
+++ b/commons/src/main/res/values-hu/strings.xml
@@ -102,6 +102,7 @@
     <string name="file_already_exists_overwrite">\"%s\" fájl már létezik. Felülírja?</string>
     <string name="folder_already_exists"> \"%s\" mappa már létezik</string>
     <string name="merge">Összevonás</string>
+    <string name="keep_both">Keep both</string>
     <string name="overwrite">Felülírás</string>
     <string name="skip">Átlépés</string>
     <string name="append">Mellékel \'_1\'</string>
