--- a/commons/src/main/res/values-nl/strings.xml
+++ b/commons/src/main/res/values-nl/strings.xml
@@ -102,6 +102,7 @@
     <string name="file_already_exists_overwrite">Bestand \"%s\" bestaat reeds. Overschrijven?</string>
     <string name="folder_already_exists">Map \"%s\" bestaat reeds</string>
     <string name="merge">Samenvoegen</string>
+    <string name="keep_both">Keep both</string>
     <string name="overwrite">Overschrijven</string>
     <string name="skip">Overslaan</string>
     <string name="append">Voeg \'_1\' toe</string>
