--- a/commons/src/main/res/values-zh-rCN/strings.xml
+++ b/commons/src/main/res/values-zh-rCN/strings.xml
@@ -102,6 +102,7 @@
     <string name="file_already_exists_overwrite">文件 \"%s\" 已存在。是否覆盖？</string>
     <string name="folder_already_exists">文件夹 \"%s\" 已存在</string>
     <string name="merge">合并</string>
+    <string name="keep_both">Keep both</string>
     <string name="overwrite">覆盖</string>
     <string name="skip">跳过</string>
     <string name="append">应用到 \'_1\'</string>
