make sure the new file conflict resolution works on OTG files too

--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -102,7 +102,7 @@
     <string name="file_already_exists_overwrite">Súbor \"%s\" už existuje. Prepísať?</string>
     <string name="folder_already_exists">Priečinok \"%s\" už existuje</string>
     <string name="merge">Zlúčiť</string>
-    <string name="keep_both">Keep both</string>
+    <string name="keep_both">Ponechať oba súbory</string>
     <string name="overwrite">Prepísať</string>
     <string name="skip">Preskočiť</string>
     <string name="append">Pripnúť \'_1\'</string>
