adding a new Upgrade to Pro button in the About section

--- a/commons/src/main/res/values-da/strings.xml
+++ b/commons/src/main/res/values-da/strings.xml
@@ -500,6 +500,7 @@
     <string name="about">Om</string>
     <string name="website_label">For at se kildekoden besøg</string>
     <string name="email_label">Send feedback og forslag til</string>
+    <string name="upgrade_to_pro_underlined"><u>Upgrade to Pro</u></string>
     <string name="more_apps_underlined"><u>Flere apps</u></string>
     <string name="third_party_licences_underlined"><u>3.-parts licencer</u></string>
     <string name="invite_friends_underlined"><u>Inviter venner</u></string>
