--- a/commons/src/main/res/values-fi/strings.xml
+++ b/commons/src/main/res/values-fi/strings.xml
@@ -500,6 +500,7 @@
     <string name="about">Tietoa</string>
     <string name="website_label">Lähdekoodin löydät täältä</string>
     <string name="email_label">Lähetä palautteesi ja ehdotuksia osoitteeseen</string>
+    <string name="upgrade_to_pro_underlined"><u>Upgrade to Pro</u></string>
     <string name="more_apps_underlined"><u>Lisää sovelluksia</u></string>
     <string name="third_party_licences_underlined"><u>Kolmansien osapuolien lisenssit</u></string>
     <string name="invite_friends_underlined"><u>Kutsu ystäviä</u></string>
