--- a/commons/src/main/res/values-az/strings.xml
+++ b/commons/src/main/res/values-az/strings.xml
@@ -500,6 +500,7 @@
     <string name="about">Haqqında</string>
     <string name="website_label">Kök koda keçiş üçün</string>
     <string name="email_label">Geri dönüş və tövsiyələrinizi göndərin</string>
+    <string name="upgrade_to_pro_underlined"><u>Upgrade to Pro</u></string>
     <string name="more_apps_underlined"><u>Daha çox tətbiq</u></string>
     <string name="third_party_licences_underlined"><u>Üçüncü partiya lisenziyaları</u></string>
     <string name="invite_friends_underlined"><u>Dostları dəvət et</u></string>
