--- a/commons/src/main/res/values-ca/strings.xml
+++ b/commons/src/main/res/values-ca/strings.xml
@@ -503,6 +503,7 @@
     <string name="about">Sobre</string>
     <string name="website_label">Més aplicacions senzilles i codi font a</string>
     <string name="email_label">Envia els teus comentaris o suggeriments a</string>
+    <string name="upgrade_to_pro_underlined"><u>Upgrade to Pro</u></string>
     <string name="more_apps_underlined"><u>Més aplicacions</u></string>
     <string name="third_party_licences_underlined"><u>Llicències de tercers</u></string>
     <string name="invite_friends_underlined"><u>Convida a amics</u></string>
