--- a/commons/src/main/res/values-cs/strings.xml
+++ b/commons/src/main/res/values-cs/strings.xml
@@ -517,6 +517,7 @@
     <string name="about">O aplikaci</string>
     <string name="website_label">Pro zdrojové kódy navštivte</string>
     <string name="email_label">Svoji zpětnou vazbu či návhry posílejte na</string>
+    <string name="upgrade_to_pro_underlined"><u>Upgrade to Pro</u></string>
     <string name="more_apps_underlined"><u>Více aplikací</u></string>
     <string name="third_party_licences_underlined"><u>Licence třetí strany</u></string>
     <string name="invite_friends_underlined"><u>Pozvat přátele</u></string>
