--- a/commons/src/main/res/values-de/strings.xml
+++ b/commons/src/main/res/values-de/strings.xml
@@ -500,6 +500,7 @@
     <string name="about">Über</string>
     <string name="website_label">Weitere schlichte Apps und Quellcode siehe</string>
     <string name="email_label">Vorschläge und Feedback bitte senden an</string>
+    <string name="upgrade_to_pro_underlined"><u>Upgrade to Pro</u></string>
     <string name="more_apps_underlined"><u>Weitere Apps</u></string>
     <string name="third_party_licences_underlined"><u>Drittanbieterlizenzen</u></string>
     <string name="invite_friends_underlined"><u>Freunde einladen</u></string>
