--- a/commons/src/main/res/values-el/strings.xml
+++ b/commons/src/main/res/values-el/strings.xml
@@ -500,6 +500,7 @@
     <string name="about">Σχετικά</string>
     <string name="website_label">Για τον κώδικα επισκεφθείτε</string>
     <string name="email_label">Στείλτε τα σχόλιά σας ή τις προτάσεις σας</string>
+    <string name="upgrade_to_pro_underlined"><u>Upgrade to Pro</u></string>
     <string name="more_apps_underlined"><u>Περισσότερες εφαρμογές</u></string>
     <string name="third_party_licences_underlined"><u>Άδειες τρίτων</u></string>
     <string name="invite_friends_underlined"><u>Προσκαλέσετε φίλους</u></string>
