--- a/commons/src/main/res/values-hi-rIN/strings.xml
+++ b/commons/src/main/res/values-hi-rIN/strings.xml
@@ -500,6 +500,7 @@
     <string name="about">के बारे में</string>
     <string name="website_label">अधिक एप्पस व सोर्स कोड</string>
     <string name="email_label">अपनी राय या सुझाव को भेजें</string>
+    <string name="upgrade_to_pro_underlined"><u>Upgrade to Pro</u></string>
     <string name="more_apps_underlined"><u>More apps</u></string>
     <string name="third_party_licences_underlined"><u> तीसरी पार्टी के लाइसेंस </u></string>
     <string name="invite_friends_underlined"><u>मित्रो को आमन्त्रित करें</u></string>
