--- a/commons/src/main/res/values-hr/strings.xml
+++ b/commons/src/main/res/values-hr/strings.xml
@@ -520,6 +520,7 @@
     <string name="about">O nama</string>
     <string name="website_label">Za pregled izvornog koda posjetite</string>
     <string name="email_label">Pošaljite nam povratne informacije ili prijedloge na</string>
+    <string name="upgrade_to_pro_underlined"><u>Upgrade to Pro</u></string>
     <string name="more_apps_underlined"><u>Više aplikacija</u></string>
     <string name="third_party_licences_underlined"><u>Licence trećih strana</u></string>
     <string name="invite_friends_underlined"><u>Pozovite prijatelje</u></string>
