--- a/commons/src/main/res/values-id/strings.xml
+++ b/commons/src/main/res/values-id/strings.xml
@@ -500,6 +500,7 @@
     <string name="about">Tentang</string>
     <string name="website_label">Untuk Sumber Kode Kunjungi</string>
     <string name="email_label">Kirimkan Masukan Dan Bantuan</string>
+    <string name="upgrade_to_pro_underlined"><u>Upgrade to Pro</u></string>
     <string name="more_apps_underlined"><u>More apps</u></string>
     <string name="third_party_licences_underlined"><u>Lisensi pihak Ke Tiga</u></string>
     <string name="invite_friends_underlined"><u>Invite friends</u></string>
