--- a/commons/src/main/res/values-it/strings.xml
+++ b/commons/src/main/res/values-it/strings.xml
@@ -500,6 +500,7 @@
     <string name="about">Informazioni</string>
     <string name="website_label">Altre semplici app e codici sorgenti in</string>
     <string name="email_label">Invia la tua opinione o i tuoi suggerimenti a</string>
+    <string name="upgrade_to_pro_underlined"><u>Upgrade to Pro</u></string>
     <string name="more_apps_underlined"><u>Altre app</u></string>
     <string name="third_party_licences_underlined"><u>Licenze di terze parti</u></string>
     <string name="invite_friends_underlined"><u>Invita un amico</u></string>
