--- a/commons/src/main/res/values-ja/strings.xml
+++ b/commons/src/main/res/values-ja/strings.xml
@@ -500,6 +500,7 @@
     <string name="about">このアプリについて</string>
     <string name="website_label">ソースコードはこちら</string>
     <string name="email_label">ご意見やご提案をお送りください</string>
+    <string name="upgrade_to_pro_underlined"><u>Upgrade to Pro</u></string>
     <string name="more_apps_underlined"><u>他のアプリ</u></string>
     <string name="third_party_licences_underlined"><u>サードパーティー ライセンス</u></string>
     <string name="invite_friends_underlined"><u>友達を招待</u></string>
