--- a/commons/src/main/res/values-lt/strings.xml
+++ b/commons/src/main/res/values-lt/strings.xml
@@ -517,6 +517,7 @@
     <string name="about">Apie</string>
     <string name="website_label">Pirminį kodą rasite</string>
     <string name="email_label">Siųskite atsiliepimus ar pasiūlymus adresu</string>
+    <string name="upgrade_to_pro_underlined"><u>Upgrade to Pro</u></string>
     <string name="more_apps_underlined"><u>Daugiau programėlių</u></string>
     <string name="third_party_licences_underlined"><u>Trečiųjų šalių licensijos</u></string>
     <string name="invite_friends_underlined"><u>Pakviesti draugus</u></string>
