--- a/commons/src/main/res/values-nb/strings.xml
+++ b/commons/src/main/res/values-nb/strings.xml
@@ -500,6 +500,7 @@
     <string name="about">Om</string>
     <string name="website_label">For kildekoden besøk</string>
     <string name="email_label">Send tilbakemelding eller forslag til</string>
+    <string name="upgrade_to_pro_underlined"><u>Upgrade to Pro</u></string>
     <string name="more_apps_underlined"><u>Flere apper</u></string>
     <string name="third_party_licences_underlined"><u>Tredjepartslisenser</u></string>
     <string name="invite_friends_underlined"><u>Inviter venner</u></string>
