--- a/commons/src/main/res/values-pt-rBR/strings.xml
+++ b/commons/src/main/res/values-pt-rBR/strings.xml
@@ -500,6 +500,7 @@
     <string name="about">Sobre</string>
     <string name="website_label">Mais aplicativos Simple e código-fonte em</string>
     <string name="email_label">Envie os seus comentários ou sugestões para</string>
+    <string name="upgrade_to_pro_underlined"><u>Upgrade to Pro</u></string>
     <string name="more_apps_underlined"><u>Mais aplicativos</u></string>
     <string name="third_party_licences_underlined"><u>Licenças de terceiros</u></string>
     <string name="invite_friends_underlined"><u>Convidar amigos</u></string>
