--- a/commons/src/main/res/values-ru/strings.xml
+++ b/commons/src/main/res/values-ru/strings.xml
@@ -522,6 +522,7 @@
     <string name="about">О приложении</string>
     <string name="website_label">Исходный код можно найти по адресу</string>
     <string name="email_label">Отправить отзывы или предложения</string>
+    <string name="upgrade_to_pro_underlined"><u>Upgrade to Pro</u></string>
     <string name="more_apps_underlined"><u>Больше простых приложений</u></string>
     <string name="third_party_licences_underlined"><u>Лицензии третьих сторон</u></string>
     <string name="invite_friends_underlined"><u>Предложить другу</u></string>
