--- a/commons/src/main/res/values-sl/strings.xml
+++ b/commons/src/main/res/values-sl/strings.xml
@@ -543,6 +543,7 @@
     <string name="about">O</string>
     <string name="website_label">Za izvorno kodo obiščite</string>
     <string name="email_label">"Svoje predloge in povratne informacije pošljite na "</string>
+    <string name="upgrade_to_pro_underlined"><u>Upgrade to Pro</u></string>
     <string name="more_apps_underlined"><u>More apps</u></string>
     <string name="third_party_licences_underlined"><u>Licence tretjih oseb</u></string>
     <string name="invite_friends_underlined"><u>Invite friends</u></string>
