--- a/commons/src/main/res/values-sv/strings.xml
+++ b/commons/src/main/res/values-sv/strings.xml
@@ -500,6 +500,7 @@
     <string name="about">Om</string>
     <string name="website_label">Du hittar källkoden på</string>
     <string name="email_label">Skicka dina synpunkter och förslag till</string>
+    <string name="upgrade_to_pro_underlined"><u>Upgrade to Pro</u></string>
     <string name="more_apps_underlined"><u>Fler appar</u></string>
     <string name="third_party_licences_underlined"><u>Tredjepartslicenser</u></string>
     <string name="invite_friends_underlined"><u>Bjud in vänner</u></string>
