--- a/commons/src/main/res/values-zh-rTW/strings.xml
+++ b/commons/src/main/res/values-zh-rTW/strings.xml
@@ -500,6 +500,7 @@
     <string name="about">關於</string>
     <string name="website_label">觀看原始碼</string>
     <string name="email_label">傳送您的反饋或建議</string>
+    <string name="upgrade_to_pro_underlined"><u>Upgrade to Pro</u></string>
     <string name="more_apps_underlined"><u>更多應用程式</u></string>
     <string name="third_party_licences_underlined"><u>第三方授權</u></string>
     <string name="invite_friends_underlined"><u>邀請朋友</u></string>
