--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -513,7 +513,7 @@
     <string name="sunday_short">Ne</string>
 
     <!-- Pro version -->
-    <string name="upgrade_to_pro">Táto verzia aplikácie už nie je podporovaná. Prosím prejdite na Pro verziu.</string>
+    <string name="upgrade_to_pro_long">Táto verzia aplikácie už nie je podporovaná. Prosím prejdite na Pro verziu.</string>
     <string name="it_is_free">Je do bezplatné do: %s</string>
     <string name="more_info">Viac info</string>
     <string name="upgrade">Stiahnuť</string>
@@ -522,7 +522,7 @@
     <string name="about">O aplikácií</string>
     <string name="website_label">Pre zdrojové kódy navštívte</string>
     <string name="email_label">Odozvu a návrhy posielajte na</string>
-    <string name="upgrade_to_pro_underlined"><u>Stiahnuť Pro verziu</u></string>
+    <string name="upgrade_to_pro">Stiahnuť Pro verziu</string>
     <string name="more_apps_underlined"><u>Viac aplikácií</u></string>
     <string name="third_party_licences_underlined"><u>Licencie tretích strán</u></string>
     <string name="invite_friends_underlined"><u>Pozvať priateľov</u></string>
