--- a/commons/src/main/res/values-es/strings.xml
+++ b/commons/src/main/res/values-es/strings.xml
@@ -491,7 +491,7 @@
     <string name="sunday_short">Dom</string>
 
     <!-- Pro version -->
-    <string name="upgrade_to_pro">Esta versión de la aplicación ya no se mantiene. Por favor, actualice a la versión Pro.</string>
+    <string name="upgrade_to_pro_long">Esta versión de la aplicación ya no se mantiene. Por favor, actualice a la versión Pro.</string>
     <string name="it_is_free">Es gratis hasta: %s</string>
     <string name="more_info">Más informanción</string>
     <string name="upgrade">Actualizar</string>
@@ -500,7 +500,7 @@
     <string name="about">Acerca de</string>
     <string name="website_label">Más aplicaciones sencillas y código fuente en</string>
     <string name="email_label">Envía tus comentarios o sugerencias a</string>
-    <string name="upgrade_to_pro_underlined"><u>Upgrade to Pro</u></string>
+    <string name="upgrade_to_pro">Upgrade to Pro</string>
     <string name="more_apps_underlined"><u>Más aplicaciones</u></string>
     <string name="third_party_licences_underlined"><u>Licencias de terceros</u></string>
     <string name="invite_friends_underlined"><u>Invitar a amigos</u></string>
