--- a/commons/src/main/res/values-hi-rIN/strings.xml
+++ b/commons/src/main/res/values-hi-rIN/strings.xml
@@ -491,7 +491,7 @@
     <string name="sunday_short">Sun</string>
 
     <!-- Pro version -->
-    <string name="upgrade_to_pro">This version of the app is no longer maintained. Please upgrade to the Pro version.</string>
+    <string name="upgrade_to_pro_long">This version of the app is no longer maintained. Please upgrade to the Pro version.</string>
     <string name="it_is_free">It is free till: %s</string>
     <string name="more_info">More info</string>
     <string name="upgrade">Upgrade</string>
@@ -500,7 +500,7 @@
     <string name="about">के बारे में</string>
     <string name="website_label">अधिक एप्पस व सोर्स कोड</string>
     <string name="email_label">अपनी राय या सुझाव को भेजें</string>
-    <string name="upgrade_to_pro_underlined"><u>Upgrade to Pro</u></string>
+    <string name="upgrade_to_pro">Upgrade to Pro</string>
     <string name="more_apps_underlined"><u>More apps</u></string>
     <string name="third_party_licences_underlined"><u> तीसरी पार्टी के लाइसेंस </u></string>
     <string name="invite_friends_underlined"><u>मित्रो को आमन्त्रित करें</u></string>
