--- a/commons/src/main/res/values-lt/strings.xml
+++ b/commons/src/main/res/values-lt/strings.xml
@@ -508,7 +508,7 @@
     <string name="sunday_short">Sek</string>
 
     <!-- Pro version -->
-    <string name="upgrade_to_pro">This version of the app is no longer maintained. Please upgrade to the Pro version.</string>
+    <string name="upgrade_to_pro_long">This version of the app is no longer maintained. Please upgrade to the Pro version.</string>
     <string name="it_is_free">It is free till: %s</string>
     <string name="more_info">More info</string>
     <string name="upgrade">Upgrade</string>
@@ -517,7 +517,7 @@
     <string name="about">Apie</string>
     <string name="website_label">Pirminį kodą rasite</string>
     <string name="email_label">Siųskite atsiliepimus ar pasiūlymus adresu</string>
-    <string name="upgrade_to_pro_underlined"><u>Upgrade to Pro</u></string>
+    <string name="upgrade_to_pro">Upgrade to Pro</string>
     <string name="more_apps_underlined"><u>Daugiau programėlių</u></string>
     <string name="third_party_licences_underlined"><u>Trečiųjų šalių licensijos</u></string>
     <string name="invite_friends_underlined"><u>Pakviesti draugus</u></string>
