--- a/commons/src/main/res/values-nl/strings.xml
+++ b/commons/src/main/res/values-nl/strings.xml
@@ -491,7 +491,7 @@
     <string name="sunday_short">Zon</string>
 
     <!-- Pro version -->
-    <string name="upgrade_to_pro">Deze versie wordt niet langer doorontwikkeld. Overweeg te upgraden naar de Pro-versie.</string>
+    <string name="upgrade_to_pro_long">Deze versie wordt niet langer doorontwikkeld. Overweeg te upgraden naar de Pro-versie.</string>
     <string name="it_is_free">Gratis tot: %s</string>
     <string name="more_info">Meer informatie</string>
     <string name="upgrade">Upgraden</string>
@@ -500,7 +500,7 @@
     <string name="about">Over</string>
     <string name="website_label">Bezoek voor de broncode</string>
     <string name="email_label">Stuur reacties of suggesties naar</string>
-    <string name="upgrade_to_pro_underlined"><u>Upgrade to Pro</u></string>
+    <string name="upgrade_to_pro">Upgrade to Pro</string>
     <string name="more_apps_underlined"><u>Meer apps</u></string>
     <string name="third_party_licences_underlined"><u>Licenties van derden</u></string>
     <string name="invite_friends_underlined"><u>Vrienden uitnodigen</u></string>
