--- a/commons/src/main/res/values-sl/strings.xml
+++ b/commons/src/main/res/values-sl/strings.xml
@@ -534,7 +534,7 @@
     <string name="sunday_short">Ned</string>
 
     <!-- Pro version -->
-    <string name="upgrade_to_pro">This version of the app is no longer maintained. Please upgrade to the Pro version.</string>
+    <string name="upgrade_to_pro_long">This version of the app is no longer maintained. Please upgrade to the Pro version.</string>
     <string name="it_is_free">It is free till: %s</string>
     <string name="more_info">More info</string>
     <string name="upgrade">Upgrade</string>
@@ -543,7 +543,7 @@
     <string name="about">O</string>
     <string name="website_label">Za izvorno kodo obiščite</string>
     <string name="email_label">"Svoje predloge in povratne informacije pošljite na "</string>
-    <string name="upgrade_to_pro_underlined"><u>Upgrade to Pro</u></string>
+    <string name="upgrade_to_pro">Upgrade to Pro</string>
     <string name="more_apps_underlined"><u>More apps</u></string>
     <string name="third_party_licences_underlined"><u>Licence tretjih oseb</u></string>
     <string name="invite_friends_underlined"><u>Invite friends</u></string>
