--- a/commons/src/main/res/values-zh-rTW/strings.xml
+++ b/commons/src/main/res/values-zh-rTW/strings.xml
@@ -491,7 +491,7 @@
     <string name="sunday_short">週日</string>
 
     <!-- Pro version -->
-    <string name="upgrade_to_pro">此版本的應用程式已不再維護。請升級到專業版。</string>
+    <string name="upgrade_to_pro_long">此版本的應用程式已不再維護。請升級到專業版。</string>
     <string name="it_is_free">它在此日期前免費：%s</string>
     <string name="more_info">更多資訊</string>
     <string name="upgrade">升級</string>
@@ -500,7 +500,7 @@
     <string name="about">關於</string>
     <string name="website_label">觀看原始碼</string>
     <string name="email_label">傳送您的反饋或建議</string>
-    <string name="upgrade_to_pro_underlined"><u>Upgrade to Pro</u></string>
+    <string name="upgrade_to_pro">Upgrade to Pro</string>
     <string name="more_apps_underlined"><u>更多應用程式</u></string>
     <string name="third_party_licences_underlined"><u>第三方授權</u></string>
     <string name="invite_friends_underlined"><u>邀請朋友</u></string>
