clarify the free upgrade period, that it isnt just a week long trial

--- a/commons/src/main/res/values-hu/strings.xml
+++ b/commons/src/main/res/values-hu/strings.xml
@@ -492,7 +492,7 @@
 
     <!-- Pro version -->
     <string name="upgrade_to_pro_long">Az alkalmazás ezen verziója már nincs fejlesztve. Frissítsen a Pro verzióra.</string>
-    <string name="it_is_free">Ingyenes: %s</string>
+    <string name="it_is_free">Ingyenes: %s. If you download it till then, you will be able to use it for free forever.</string>
     <string name="more_info">További információ</string>
     <string name="upgrade">Frissítés</string>
 
