--- a/commons/src/main/res/values-zh-rCN/strings.xml
+++ b/commons/src/main/res/values-zh-rCN/strings.xml
@@ -492,7 +492,7 @@
 
     <!-- Pro version -->
     <string name="upgrade_to_pro_long">此版本的应用不再支持维护。请升级到专业版。</string>
-    <string name="it_is_free">免费期限至: %s</string>
+    <string name="it_is_free">免费期限至: %s. If you download it till then, you will be able to use it for free forever.</string>
     <string name="more_info">更多信息</string>
     <string name="upgrade">升级</string>
 
