--- a/commons/src/main/res/values-zh-rTW/strings.xml
+++ b/commons/src/main/res/values-zh-rTW/strings.xml
@@ -492,7 +492,7 @@
 
     <!-- Pro version -->
     <string name="upgrade_to_pro_long">此版本的應用程式已不再維護。請升級到專業版。</string>
-    <string name="it_is_free">它在此日期前免費：%s</string>
+    <string name="it_is_free">它在此日期前免費：%s. If you download it till then, you will be able to use it for free forever.</string>
     <string name="more_info">更多資訊</string>
     <string name="upgrade">升級</string>
 
