--- a/commons/src/main/res/values-ca/strings.xml
+++ b/commons/src/main/res/values-ca/strings.xml
@@ -495,7 +495,7 @@
 
     <!-- Pro version -->
     <string name="upgrade_to_pro_long">Aquesta versió de l\'aplicació ja no es manté. Actualitzeu a la versió Pro.</string>
-    <string name="it_is_free">És gratuït fins a: %s</string>
+    <string name="it_is_free">És gratuït fins a: %s. If you download it till then, you will be able to use it for free forever.</string>
     <string name="more_info">Més informació</string>
     <string name="upgrade">Actualitza</string>
 
