--- a/commons/src/main/res/values-es/strings.xml
+++ b/commons/src/main/res/values-es/strings.xml
@@ -492,7 +492,7 @@
 
     <!-- Pro version -->
     <string name="upgrade_to_pro_long">Esta versión de la aplicación ya no se mantiene. Por favor, actualice a la versión Pro.</string>
-    <string name="it_is_free">Es gratis hasta: %s</string>
+    <string name="it_is_free">Es gratis hasta: %s. If you download it till then, you will be able to use it for free forever.</string>
     <string name="more_info">Más informanción</string>
     <string name="upgrade">Actualizar</string>
 
