--- a/commons/src/main/res/values-ru/strings.xml
+++ b/commons/src/main/res/values-ru/strings.xml
@@ -514,7 +514,7 @@
 
     <!-- Pro version -->
     <string name="upgrade_to_pro_long">Данная версия приложения больше не поддерживается. Обновите версию на «Pro».</string>
-    <string name="it_is_free">Это бесплатно до: %s</string>
+    <string name="it_is_free">Это бесплатно до: %s. If you download it till then, you will be able to use it for free forever.</string>
     <string name="more_info">Подробнее</string>
     <string name="upgrade">Обновить</string>
 
