--- a/commons/src/main/res/values-sk/strings.xml
+++ b/commons/src/main/res/values-sk/strings.xml
@@ -514,7 +514,7 @@
 
     <!-- Pro version -->
     <string name="upgrade_to_pro_long">Táto verzia aplikácie už nie je podporovaná. Prosím prejdite na Pro verziu.</string>
-    <string name="it_is_free">Je do bezplatné do: %s</string>
+    <string name="it_is_free">Je do bezplatné do: %s. Ak ju dovtedy stiahnete, budete ju môcť zadarmo navždy používať.</string>
     <string name="more_info">Viac info</string>
     <string name="upgrade">Stiahnuť</string>
 
