--- a/commons/src/main/res/values-tr/strings.xml
+++ b/commons/src/main/res/values-tr/strings.xml
@@ -492,7 +492,7 @@
 
     <!-- Pro version -->
     <string name="upgrade_to_pro_long">Uygulamanın bu sürümü artık sağlanmıyor. Lütfen Pro sürümüne yükseltin.</string>
-    <string name="it_is_free">Şu süre kadar ücretsiz: %s</string>
+    <string name="it_is_free">Şu süre kadar ücretsiz: %s. If you download it till then, you will be able to use it for free forever.</string>
     <string name="more_info">Daha fazla bilgi</string>
     <string name="upgrade">Yükselt</string>
 
