--- a/commons/src/main/res/values-ru/strings.xml
+++ b/commons/src/main/res/values-ru/strings.xml
@@ -514,7 +514,7 @@
 
     <!-- Pro version -->
     <string name="upgrade_to_pro_long">Данная версия приложения больше не поддерживается. Обновите версию на «Pro».</string>
-    <string name="it_is_free">Это бесплатно до: %s. If you download it till then, you will be able to use it for free forever.</string>
+    <string name="it_is_free">Это бесплатно до: %s. При загрузке до указанной даты вы получаете её бесплатно навсегда.</string>
     <string name="more_info">Подробнее</string>
     <string name="upgrade">Обновить</string>
 
@@ -522,7 +522,7 @@
     <string name="about">О приложении</string>
     <string name="website_label">Исходный код можно найти по адресу</string>
     <string name="email_label">Отправить отзывы или предложения</string>
-    <string name="upgrade_to_pro">Upgrade to Pro</string>
+    <string name="upgrade_to_pro">Обновить до Pro</string>
     <string name="more_apps_underlined"><u>Больше простых приложений</u></string>
     <string name="third_party_licences_underlined"><u>Лицензии третьих сторон</u></string>
     <string name="invite_friends_underlined"><u>Предложить другу</u></string>
