--- a/commons/src/main/res/values-de/strings.xml
+++ b/commons/src/main/res/values-de/strings.xml
@@ -389,7 +389,7 @@
     <string name="use_24_hour_time_format">Benutze 24-Std.-Zeitformat</string>
     <string name="sunday_first">Beginne die Woche am Sonntag</string>
     <string name="widgets">Widgets</string>
-    <string name="use_same_snooze">Immer den selben Schlummer-Intervall nutzen</string>
+    <string name="use_same_snooze">Immer dasselbe Schlummer-Intervall nutzen</string>
     <string name="snooze_time">Schlummer-Intervall</string>
     <string name="vibrate_on_button_press">Bei Tastendruck vibrieren</string>
     <string name="move_items_into_recycle_bin">Elemente in den Papierkorb verschieben statt löschen</string>
