fixing some hungarian week day letters

--- a/commons/src/main/res/values-hu/strings.xml
+++ b/commons/src/main/res/values-hu/strings.xml
@@ -477,9 +477,9 @@
     <string name="monday_letter">H</string>
     <string name="tuesday_letter">K</string>
     <string name="wednesday_letter">Sz</string>
-    <string name="thursday_letter">K</string>
+    <string name="thursday_letter">Cs</string>
     <string name="friday_letter">P</string>
-    <string name="saturday_letter">V</string>
+    <string name="saturday_letter">Sz</string>
     <string name="sunday_letter">V</string>
 
     <string name="monday_short">Hé</string>
