fixing a hungarian string

--- a/commons/src/main/res/values-hu/strings.xml
+++ b/commons/src/main/res/values-hu/strings.xml
@@ -283,7 +283,7 @@
     </plurals>
     <plurals name="hours">
         <item quantity="one">%d óra</item>
-        <item quantity="other">%d nap</item>
+        <item quantity="other">%d óra</item>
     </plurals>
     <plurals name="days">
         <item quantity="one">%d nap</item>
