updating a russian string

--- a/commons/src/main/res/values-ru/strings.xml
+++ b/commons/src/main/res/values-ru/strings.xml
@@ -392,7 +392,7 @@
     <string name="purchase_simple_thank_you">Купить Simple Thank You</string>
     <string name="customize_colors">Настроить цвета</string>
     <string name="customize_widget_colors">Настроить цвета виджета</string>
-    <string name="use_english_language">Use English language</string>
+    <string name="use_english_language">Использовать английский</string>
     <string name="show_hidden_items">Показывать скрытые папки</string>
     <string name="font_size">Размер шрифта</string>
     <string name="small">Мелкий</string>
